--- a/app/src/main/res/layout/articles_items.xml
+++ b/app/src/main/res/layout/articles_items.xml
@@ -40,6 +40,7 @@
             android:text="@string/sample_title_articles"
             android:textColor="@color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/card_image" />
@@ -52,8 +53,8 @@
             android:textColor="@color/black"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="8dp"
-            android:textSize="14sp"
-            android:maxLines="2"
+            android:textSize="16sp"
+            android:maxLines="3"
             android:ellipsize="end"
             app:layout_constraintTop_toBottomOf="@+id/title_articles" />
 
