--- a/app/src/main/res/layout/articles_more_items.xml
+++ b/app/src/main/res/layout/articles_more_items.xml
@@ -5,8 +5,7 @@
     android:layout_width="250dp"
     android:layout_height="wrap_content"
     app:cardElevation="0dp"
-    app:cardCornerRadius="16dp"
-    android:layout_marginEnd="8dp">
+    app:cardCornerRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
