--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -70,7 +70,7 @@
                         android:layout_height="wrap_content"
                         android:text="Current Plan"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
+                        android:textSize="20sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -91,7 +91,7 @@
                         android:layout_height="wrap_content"
                         android:text="Silver Package"
                         android:textColor="@color/black"
-                        android:textSize="20sp"
+                        android:textSize="24sp"
                         android:textStyle="bold"
                         android:layout_marginTop="4dp"
                         app:layout_constraintTop_toBottomOf="@+id/plan"
@@ -104,7 +104,7 @@
                         android:layout_marginTop="2dp"
                         android:text="Speed up to 30 Mbps"
                         android:textColor="@color/black"
-                        android:textSize="12sp"
+                        android:textSize="16sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/current_plan" />
 
@@ -115,7 +115,7 @@
                         android:layout_marginTop="2dp"
                         android:text="Service Date : 15 September 2023"
                         android:textColor="@color/black"
-                        android:textSize="12sp"
+                        android:textSize="16sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/speed" />
 
@@ -126,7 +126,7 @@
                         android:layout_marginTop="2dp"
                         android:text="Location : Dharmasusada Indah VI No.100, Surabaya"
                         android:textColor="@color/black"
-                        android:textSize="12sp"
+                        android:textSize="16sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/date" />
 
@@ -171,7 +171,8 @@
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:src="@drawable/icon_wifi"
-                            app:tint="@color/white" />
+                            app:tint="@color/white"
+                            android:contentDescription="@null" />
                     </androidx.appcompat.widget.LinearLayoutCompat>
                 </androidx.cardview.widget.CardView>
 
@@ -202,7 +203,8 @@
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:src="@drawable/icon_shop"
-                            app:tint="@color/white"/>
+                            app:tint="@color/white"
+                            android:contentDescription="@null"/>
                     </androidx.appcompat.widget.LinearLayoutCompat>
                 </androidx.cardview.widget.CardView>
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -231,7 +233,7 @@
                         android:layout_height="wrap_content"
                         android:text="Traffic Usage"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
+                        android:textSize="20sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -241,7 +243,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:background="@color/white"
-                        android:contentDescription="null"
+                        android:contentDescription="@null"
                         android:paddingVertical="8dp"
                         android:paddingHorizontal="16dp"
                         android:src="@drawable/icon_more"
@@ -256,7 +258,7 @@
                         android:layout_marginTop="4dp"
                         android:text="Surabaya"
                         android:textColor="@color/black"
-                        android:textSize="20sp"
+                        android:textSize="24sp"
                         android:textStyle="bold"
                         app:layout_constraintTop_toBottomOf="@+id/usage"
                         tools:ignore="MissingConstraints" />
@@ -268,7 +270,7 @@
                         android:layout_marginTop="2dp"
                         android:text="Agustus 2023 : 200GB"
                         android:textColor="@color/black"
-                        android:textSize="12sp"
+                        android:textSize="16sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/current_location" />
 
@@ -279,7 +281,7 @@
                         android:layout_marginTop="2dp"
                         android:text="Juli 2023 : 300GB"
                         android:textColor="@color/black"
-                        android:textSize="12sp"
+                        android:textSize="16sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/speeds" />
 
@@ -290,7 +292,7 @@
                         android:layout_marginTop="2dp"
                         android:text="Juni 2023 : 150GB"
                         android:textColor="@color/black"
-                        android:textSize="12sp"
+                        android:textSize="16sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/dates" />
 
@@ -320,7 +322,7 @@
                         android:layout_height="wrap_content"
                         android:text="News Articles"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
+                        android:textSize="20sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -328,7 +330,7 @@
                         android:id="@+id/rv_articles"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="12dp"
                         app:layout_constraintTop_toBottomOf="@id/articles"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
