--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,6 +12,12 @@
         android:title="@string/title_news" />
 
     <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/icon_profile"
+        android:title="@string/title_profile" />
+
+
+    <item
         android:id="@+id/navigation_settings"
         android:icon="@drawable/icon_settings"
         android:title="@string/title_settings" />
