--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,6 +22,13 @@
     </fragment>
 
     <fragment
+        android:id="@+id/navigation_profile"
+        android:name="com.example.capstoneproject.ui.profile.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile">
+    </fragment>
+
+    <fragment
         android:id="@+id/navigation_settings"
         android:name="com.example.capstoneproject.ui.settings.SettingsFragment"
         android:label="@string/title_settings"
