--- a/app/src/main/res/layout/faq_items.xml
+++ b/app/src/main/res/layout/faq_items.xml
@@ -32,7 +32,7 @@
                     android:id="@+id/tv_questions"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    style="@style/MontserratMedium"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="Bagaimana cara saya mengaktifkan layanan internet dari Wownet?"
                     android:textColor="@color/secondaryColor"
                     android:textSize="16sp"
@@ -46,7 +46,7 @@
                     android:id="@+id/icon_expand"
                     android:layout_width="28dp"
                     android:layout_height="28dp"
-                    android:src="@drawable/icon_expand_down"
+                    android:src="@drawable/icon_expand_more"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
