--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,6 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:backgroundTint="@color/contentColor"
+            app:navigationIconTint="@color/white"
+            app:menu="@menu/logout_menu"
             app:titleTextColor="@color/white"
             app:title="Profile"
             app:titleCentered="true" />
@@ -48,7 +50,6 @@
                 android:id="@+id/containerProfile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="8dp"
                 android:background="@color/lightPrimaryColor">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -667,44 +668,6 @@
                     </GridLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/item_bg"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/cardSocialMedia">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/containerLogout"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_marginHorizontal="16dp">
-
-                        <ImageView
-                            android:id="@+id/icLogout"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:contentDescription="@null"
-                            android:src="@drawable/icon_logout"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:tint="@color/secondaryColor" />
-
-                        <TextView
-                            android:id="@+id/tvLogout"
-                            style="@style/MontserratMedium"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:text="Logout"
-                            android:textColor="@color/secondaryColor"
-                            app:layout_constraintBottom_toBottomOf="@+id/icLogout"
-                            app:layout_constraintStart_toEndOf="@+id/icLogout"
-                            app:layout_constraintTop_toTopOf="@+id/icLogout" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-                </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
