--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -29,8 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:fontFamily="@font/montserrat_bold"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/tvMessage"
             app:layout_constraintStart_toEndOf="@+id/ivMessenger"
             app:layout_constraintTop_toTopOf="@+id/ivMessenger"
@@ -44,8 +44,9 @@
             android:background="@drawable/rounded_message_yellow"
             android:maxWidth="250dp"
             android:padding="10dp"
+            android:fontFamily="@font/montserrat_medium"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/secondaryColor"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="@+id/tvMessenger"
             app:layout_constraintTop_toBottomOf="@id/tvMessenger"
             tools:text="This is a message" />
@@ -58,6 +59,7 @@
             android:layout_marginStart="4dp"
             android:maxLines="2"
             android:textSize="12sp"
+            android:fontFamily="@font/montserrat_medium"
             app:layout_constraintBottom_toBottomOf="@+id/tvMessage"
             app:layout_constraintStart_toEndOf="@+id/tvMessage"
             tools:text="Just Now" />
@@ -88,7 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textStyle="bold"
+            android:fontFamily="@font/montserrat_bold"
             app:layout_constraintBottom_toTopOf="@id/tvMessageRight"
             app:layout_constraintEnd_toStartOf="@+id/ivMessengerRight"
             app:layout_constraintTop_toTopOf="@+id/ivMessengerRight"
@@ -102,8 +104,9 @@
             android:background="@drawable/rounded_message_blue"
             android:maxWidth="250dp"
             android:padding="10dp"
+            android:fontFamily="@font/montserrat_medium"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/secondaryColor"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="@+id/tvMessengerRight"
             app:layout_constraintTop_toBottomOf="@id/tvMessengerRight"
             tools:text="This is a message" />
@@ -115,6 +118,7 @@
             android:layout_gravity="bottom"
             android:layout_marginEnd="4dp"
             android:maxLines="2"
+            android:fontFamily="@font/montserrat_medium"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvMessageRight"
             app:layout_constraintEnd_toStartOf="@+id/tvMessageRight"
