--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -142,6 +142,7 @@
                 android:focusable="false"
                 android:layout_height="50dp"
                 android:textSize="14sp"
+                android:textColor="@color/secondaryColor"
                 android:imeOptions="actionNext"
                 android:hint="Confirm Password"
                 android:inputType="textPassword" />
