--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -79,26 +79,30 @@
                     <!-- First Name -->
                     <TextView
                         android:id="@+id/tvFullName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="8dp"
+                        android:gravity="center"
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/montserrat_bold"
                         android:textColor="@color/secondaryColor"
                         android:textSize="22sp"
-                        app:layout_constraintEnd_toEndOf="@+id/imgProfile"
-                        app:layout_constraintStart_toStartOf="@+id/imgProfile"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/imgProfile" />
 
                     <!-- Email -->
                     <TextView
                         android:id="@+id/tvEmail"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:paddingHorizontal="8dp"
+                        android:gravity="center"
                         android:fontFamily="@font/montserrat_medium"
-                        android:textSize="18sp"
                         android:textColor="@color/secondaryColor"
-                        app:layout_constraintEnd_toEndOf="@+id/imgProfile"
-                        app:layout_constraintStart_toStartOf="@+id/imgProfile"
+                        android:textSize="18sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/tvFullName" />
 
                     <androidx.appcompat.widget.LinearLayoutCompat
