--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -56,12 +56,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/montserrat_medium"
             android:maxLines="2"
             android:textSize="12sp"
-            android:fontFamily="@font/montserrat_medium"
-            app:layout_constraintBottom_toBottomOf="@+id/tvMessage"
-            app:layout_constraintStart_toEndOf="@+id/tvMessage"
+            app:layout_constraintStart_toStartOf="@+id/tvMessage"
+            app:layout_constraintTop_toBottomOf="@+id/tvMessage"
             tools:text="Just Now" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -116,12 +116,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_marginEnd="4dp"
-            android:maxLines="2"
+            android:layout_marginTop="4dp"
             android:fontFamily="@font/montserrat_medium"
+            android:maxLines="2"
             android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/tvMessageRight"
-            app:layout_constraintEnd_toStartOf="@+id/tvMessageRight"
+            app:layout_constraintEnd_toEndOf="@+id/tvMessageRight"
+            app:layout_constraintTop_toBottomOf="@+id/tvMessageRight"
             tools:text="Just Now" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
