--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -96,9 +96,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:imeOptions="actionNext"
-                android:textSize="14sp"
                 android:maxLines="1"
-                android:textColor="@color/secondaryColor" />
+                android:textColor="@color/secondaryColor"
+                android:textSize="14sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -133,57 +133,6 @@
                 android:textColor="@color/secondaryColor" />
 
         </com.google.android.material.textfield.TextInputLayout>
-
-<!--        <com.example.capstoneproject.ui.customView.nameEditText-->
-<!--            android:id="@+id/etFirstName"-->
-<!--            android:focusable="false"-->
-<!--            style="@style/EditText"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="48dp"-->
-<!--            android:layout_marginStart="16dp"-->
-<!--            android:layout_marginTop="32dp"-->
-<!--            android:layout_marginEnd="16dp"-->
-<!--            android:hint="First Name"-->
-<!--            android:imeOptions="actionNext"-->
-<!--            android:textSize="14sp"-->
-<!--            android:textColor="@color/secondaryColor"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/textView" />-->
-
-<!--        <com.example.capstoneproject.ui.customView.nameEditText-->
-<!--            android:id="@+id/etLastName"-->
-<!--            android:focusable="false"-->
-<!--            style="@style/EditText"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="48dp"-->
-<!--            android:layout_marginStart="16dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            android:layout_marginEnd="16dp"-->
-<!--            android:hint="Last Name"-->
-<!--            android:imeOptions="actionNext"-->
-<!--            android:textSize="14sp"-->
-<!--            android:textColor="@color/secondaryColor"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/layoutFirstName" />-->
-
-<!--        <com.example.capstoneproject.ui.customView.emailEditText-->
-<!--            android:id="@+id/etEmail"-->
-<!--            android:focusable="false"-->
-<!--            style="@style/EditText"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="48dp"-->
-<!--            android:layout_marginStart="16dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            android:layout_marginEnd="16dp"-->
-<!--            android:hint="Email"-->
-<!--            android:imeOptions="actionNext"-->
-<!--            android:textSize="14sp"-->
-<!--            android:textColor="@color/secondaryColor"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/etLastName" />-->
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layoutPassword"
@@ -250,76 +199,6 @@
                 android:textColor="@color/secondaryColor" />
 
         </com.google.android.material.textfield.TextInputLayout>
-
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/layoutPasswords"-->
-<!--            style="@style/EditTextNoPadding"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="48dp"-->
-<!--            android:layout_marginStart="16dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            android:layout_marginEnd="16dp"-->
-<!--            app:hintEnabled="false"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintLeft_toLeftOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/layoutPassword"-->
-<!--            app:passwordToggleEnabled="true">-->
-
-<!--            <com.example.capstoneproject.ui.customView.passwordEditText-->
-<!--                android:id="@+id/etPasswords"-->
-<!--                style="@style/EditTextPassword"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="50dp"-->
-<!--                android:focusable="false"-->
-<!--                android:hint="Password"-->
-<!--                android:imeOptions="actionNext"-->
-<!--                android:inputType="textPassword"-->
-<!--                android:textSize="14sp"-->
-<!--                android:textColor="@color/secondaryColor" />-->
-
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
-
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/layoutConfirmPassword"-->
-<!--            style="@style/EditTextNoPadding"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="48dp"-->
-<!--            android:layout_marginStart="16dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            android:layout_marginEnd="16dp"-->
-<!--            app:hintEnabled="false"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintLeft_toLeftOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/layoutPasswords"-->
-<!--            app:passwordToggleEnabled="true">-->
-
-<!--            <com.example.capstoneproject.ui.customView.passwordEditText-->
-<!--                android:id="@+id/etConfirmPassword"-->
-<!--                style="@style/EditTextPassword"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:focusable="false"-->
-<!--                android:layout_height="50dp"-->
-<!--                android:textSize="14sp"-->
-<!--                android:textColor="@color/secondaryColor"-->
-<!--                android:imeOptions="actionNext"-->
-<!--                android:hint="Confirm Password"-->
-<!--                android:inputType="textPassword" />-->
-
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
-<!--        <Button-->
-<!--            android:id="@+id/btnregis"-->
-<!--            android:layout_width="300dp"-->
-<!--            android:layout_height="60dp"-->
-<!--            android:layout_marginTop="15dp"-->
-<!--            android:backgroundTint="@color/contentColor"-->
-<!--            android:text="Register"-->
-<!--            android:textColor="@color/primaryColor"-->
-<!--            android:textSize="18dp"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/passwordconfirmlayout"/>-->
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/linearLayoutButton"
@@ -431,6 +310,19 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:translationZ="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
